tests/baselines/reference/shadowPrivateMembers.errors.txt
tests/cases/compiler/shadowPrivateMembers.ts(2,38): error TS2416: Property 'n' in type 'derived' is not assignable to the same property in base type 'base'.
  Type '() => void' is not assignable to type '() => void'. Two different types with this name exist, but they are unrelated.
    The 'this' types of each signature are incompatible.
      Type 'base' is not assignable to type 'derived'.
        Types have separate declarations of a private property 'n'.


==== tests/cases/compiler/shadowPrivateMembers.ts (1 errors) ====
    class base { private n() {} }
    class derived extends base { private n() {} }
                                         ~
!!! error TS2416: Property 'n' in type 'derived' is not assignable to the same property in base type 'base'.
!!! error TS2416:   Type '() => void' is not assignable to type '() => void'. Two different types with this name exist, but they are unrelated.
!!! error TS2416:     The 'this' types of each signature are incompatible.
!!! error TS2416:       Type 'base' is not assignable to type 'derived'.
!!! error TS2416:         Types have separate declarations of a private property 'n'.
    